fixed auto scroll to top on Admin register, removed colorblobs on login screens, stretched login body to avoid gap under footer, added spacing around login button after revisiting login page once already logged in.

--- a/client/src/components/login/Admin.css
+++ b/client/src/components/login/Admin.css
@@ -54,4 +54,7 @@
     bottom: 2px;
     left: 2px;
     }
-    
+    .loginGrid {
+        display: flex;
+        min-height: 60vh;
+    }
