--- a/client/src/components/login/Login.css
+++ b/client/src/components/login/Login.css
@@ -139,6 +139,7 @@ user-select: none;
 -webkit-user-select: none;
 touch-action: manipulation;
 margin-bottom: 2em;
+margin-top: 2em;
 }
 
 .signOutBtn:focus {
